// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataOverview.vue refresh page on second page 1`] = `
Object {
  "click": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "focusin": Array [
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "focusout": Array [
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "loadData": Array [
    Array [
      12,
    ],
    Array [
      12,
    ],
  ],
  "mousedown": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseenter": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mousemove": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseover": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseup": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerdown": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerenter": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointermove": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerover": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerup": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "refresh": Array [
    Array [],
  ],
}
`;

exports[`DataOverview.vue refresh page on second page 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "pagination-next-button-clicked",
    ],
    Array [
      "table-refresh-button-clicked",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DataOverview.vue renders additional scoped slot 1`] = `
<table
  class="has-hover is-clickable k-table"
  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
  data-v-77421f6a=""
>
  <thead
    class=""
    data-v-77421f6a=""
  >
    <tr
      class=""
      data-v-77421f6a=""
    >
      
      <th
        class=""
        data-v-77421f6a=""
      >
        <span
          class="d-flex align-items-center"
          data-v-77421f6a=""
        >
          
          <span
            class="sr-only"
            data-v-77421f6a=""
          >
            custom
          </span>
          
          <!---->
        </span>
      </th>
      
    </tr>
  </thead>
  <tbody
    data-v-77421f6a=""
  >
    
    <tr
      data-v-77421f6a=""
      role="link"
      tabindex="0"
    >
      
      <td
        data-v-77421f6a=""
      >
        
        
        <ul>
          <li>
            test
          </li>
        </ul>
        
        
      </td>
      
    </tr>
    
  </tbody>
</table>
`;

exports[`DataOverview.vue renders all custom templates for data 1`] = `
<div>
  <div
    class="data-overview"
    data-testid="data-overview"
  >
    <!-- controls -->
    <div
      class="data-table-controls mb-2"
    >
      
      
      <button
        class="small rounded primary k-button ml-2 refresh-button"
        data-v-29036f3a=""
        type="button"
      >
        
        <!---->
        
        
        <div
          class="refresh-icon"
        >
          <svg
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#fff"
              fill-rule="nonzero"
            >
              <path
                d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
              />
            </g>
          </svg>
        </div>
        <span>
          Refresh
        </span>
        
        <!---->
      </button>
    </div>
    <div
      class="data-overview-content"
    >
      <!-- data -->
      <div
        class="data-overview-table"
      >
        <div
          class="micro-table"
          data-v-77421f6a=""
          is-clickable=""
        >
          <section
            class="k-table-wrapper"
            data-v-77421f6a=""
          >
            <table
              class="has-hover is-clickable k-table"
              data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              data-v-77421f6a=""
            >
              <thead
                class=""
                data-v-77421f6a=""
              >
                <tr
                  class=""
                  data-v-77421f6a=""
                >
                  
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class="sr-only"
                        data-v-77421f6a=""
                      >
                        actions
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class=""
                        data-v-77421f6a=""
                      >
                        Status
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class=""
                        data-v-77421f6a=""
                      >
                        Tags
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class=""
                        data-v-77421f6a=""
                      >
                        Total Updates
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class=""
                        data-v-77421f6a=""
                      >
                        Kuma DP version
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class=""
                        data-v-77421f6a=""
                      >
                        Envoy version
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  <th
                    class=""
                    data-v-77421f6a=""
                  >
                    <span
                      class="d-flex align-items-center"
                      data-v-77421f6a=""
                    >
                      
                      <span
                        class="sr-only"
                        data-v-77421f6a=""
                      >
                        warnings
                      </span>
                      
                      <!---->
                    </span>
                  </th>
                  
                </tr>
              </thead>
              <tbody
                data-v-77421f6a=""
              >
                
                <tr
                  data-v-77421f6a=""
                  role="link"
                  tabindex="0"
                >
                  
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <a
                      class="data-table-action-link"
                    >
                      <span
                        class="action-link__normal-state"
                      >
                         View 
                      </span>
                    </a>
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <div
                      class="entity-status is-offline"
                    >
                      <span
                        class="entity-status__dot"
                      />
                      <span
                        class="entity-status__label"
                      >
                        offline
                      </span>
                    </div>
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    
                    <span
                      class="entity-tag"
                    >
                      <span
                        class="entity-tag__label entity-tag__label--env"
                      >
                        env
                      </span>
                      <span
                        class="entity-tag__value entity-tag__value--dev"
                      >
                        dev
                      </span>
                    </span>
                    <span
                      class="entity-tag"
                    >
                      <span
                        class="entity-tag__label entity-tag__label--kuma-io-service"
                      >
                        kuma.io/service
                      </span>
                      <span
                        class="entity-tag__value entity-tag__value--kuma-example-backend"
                      >
                        kuma-example-backend
                      </span>
                    </span>
                    <span
                      class="entity-tag"
                    >
                      <span
                        class="entity-tag__label entity-tag__label--tag01"
                      >
                        tag01
                      </span>
                      <span
                        class="entity-tag__value entity-tag__value--value01"
                      >
                        value01
                      </span>
                    </span>
                    <span
                      class="entity-tag"
                    >
                      <span
                        class="entity-tag__label entity-tag__label--reallylongtaglabelhere"
                      >
                        reallyLongTagLabelHere
                      </span>
                      <span
                        class="entity-tag__value entity-tag__value--a-really-long-tag-value-here"
                      >
                        a-really-long-tag-value-here
                      </span>
                    </span>
                    
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <span
                      class="entity-total-updates"
                    >
                      <span>
                        1
                      </span>
                    </span>
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <div
                      class=""
                    >
                      foo
                    </div>
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <div
                      class=""
                    >
                      1.2
                    </div>
                    
                  </td>
                  <td
                    data-v-77421f6a=""
                  >
                    
                    <span
                      class="mr-1 kong-icon-warning kong-icon"
                      data-v-637de6fa=""
                    >
                      <svg
                        height="20"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-75)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-75)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-75)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                    
                  </td>
                  
                </tr>
                
              </tbody>
            </table>
            <!---->
          </section>
        </div>
        <div
          class="pagination"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <!-- empty state if no items are found -->
      <!--v-if-->
      <!-- additional page content -->
      <!--v-if-->
    </div>
    <!-- loading state -->
    <!--v-if-->
    <!-- error has occurred -->
    <!--v-if-->
  </div>
</div>
`;

exports[`DataOverview.vue renders basic snapshot 1`] = `
<div>
  <div
    class="data-overview"
    data-testid="data-overview"
  >
    <!-- controls -->
    <div
      class="data-table-controls mb-2"
    >
      
      
      <button
        class="small rounded primary k-button ml-2 refresh-button"
        data-v-29036f3a=""
        type="button"
      >
        
        <!---->
        
        
        <div
          class="refresh-icon"
        >
          <svg
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="#fff"
              fill-rule="nonzero"
            >
              <path
                d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
              />
            </g>
          </svg>
        </div>
        <span>
          Refresh
        </span>
        
        <!---->
      </button>
    </div>
    <div
      class="data-overview-content"
    >
      <!-- data -->
      <div
        class="data-overview-table"
      >
        <div
          class="micro-table"
          data-v-77421f6a=""
          is-clickable=""
        >
          <!---->
        </div>
        <div
          class="pagination"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <!-- empty state if no items are found -->
      <!--v-if-->
      <!-- additional page content -->
      <!--v-if-->
    </div>
    <!-- loading state -->
    <!--v-if-->
    <!-- error has occurred -->
    <!--v-if-->
  </div>
</div>
`;
